<resources>
    <string name="app_name">Lugares</string>
    <string name="tv_correo">Correo</string>
    <string name="tv_clave">Contraseña</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_lugar">Lugares</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="msg_nombre">Nombre del lugar</string>
    <string name="msg_correo">Correo (correo@xxxx.xxxx)</string>
    <string name="msg_imagen">Imagen del lugar</string>
    <string name="msg_telefono">Teléfono (9999-9999)</string>
    <string name="msg_web">Sitio web</string>
    <string name="bt_agregar">Agregar</string>
    <string name="msg_lugar_added">Lugar agregado</string>
    <string name="msg_data">Flatan Datos!!</string>
    <string name="fb_agregar">Agregar Lista</string>
    <string name="agregar">Agregar</string>
</resources>